--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -20,5 +20,5 @@ jobs:
     - name: Run Python Script
       run: |  
         python -m pip install --upgrade pip
-        pip install -r python/requirements.txt
-        python python/apiCall.py
+        pip install -r requirements.txt
+        python apiCall.py
