--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -25,3 +25,16 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         python apiCall.py
+
+    - name: commit files
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add -A
+        git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
+
+    - name: push changes
+      uses: ad-m/github-push-action@v0.6.0
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: main 
